A new heading is added.

--- a/Salman_khan/album.html
+++ b/Salman_khan/album.html
@@ -17,6 +17,7 @@
     <img src='33.jpg' alt=''>
 </marquee>
     <h1>Salman Khan Hit Movies</h1>
+    <h2>Salman Khan Flop Movies</h2>
     <img src='1.jpg' alt=''>
     <img src='2.jpg' alt=''>
     <img src='3.jpg' alt=''>
