added are listed

--- a/Salman_khan/album.html
+++ b/Salman_khan/album.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Salman Khan Hits</title>
+    <title>Salman Khan Hits are below</title>
     <link rel='stylesheet' href='album.css'>
   </head>
   <body bgcolor='black'>
